--- a/assets/package.json
+++ b/assets/package.json
@@ -14,11 +14,11 @@
     "@babel/preset-env": "^7.9.6",
     "babel-loader": "^8.1.0",
     "copy-webpack-plugin": "^5.1.1",
-    "css-loader": "^2.1.1",
+    "css-loader": "^3.4.2",
     "elm-webpack-loader": "^6.0.1",
-    "mini-css-extract-plugin": "^0.4.0",
+    "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "uglifyjs-webpack-plugin": "^1.2.4",
+    "terser-webpack-plugin": "^2.3.2",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
   }
