--- a/assets/package.json
+++ b/assets/package.json
@@ -15,11 +15,13 @@
     "babel-loader": "^8.1.0",
     "copy-webpack-plugin": "^5.1.2",
     "css-loader": "^3.6.0",
-    "elm-webpack-loader": "^6.0.1",
+    "elm-webpack-loader": "^7.0.1",
+    "lodash": ">=4.17.19",
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "terser-webpack-plugin": "^2.3.8",
     "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "yargs-parser": ">=13.1.2"
   }
 }
